# python-project-lvl2

./: .coverage  .gitignore  .travis.yaml  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  cli.py  formatters.py  generate_diff.py  parser.py
gendiff/formats/: __init__.py  formater.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
scripts/: gendiff.py  generate_diff.py
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_plain.py  test_gendiff_stylish.py  test_gendiff_yml.py
tests/fixtures/: file1.yml  file2.yml
