[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "project2"
authors = ["mvarnavskaya"]
packages = [
  { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
scripts = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
